# Connective

admin/admin-dashboard/: package-lock.json  package.json
admin/admin-dashboard/pages/: _app.js  index.js
connective/: next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
connective-chat/: .babelrc  .env.example  Dockerfile  README.md  deploy.sh  dev.Dockerfile  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json
connective-chat/nginx/: default.conf
connective-chat/src/: server.ts
connective-chat/src/connection-maps/: connection-keys.map.ts  (+1 more)
connective/lib/: dao.ts  messages.ts
connective/services/: authService.ts
connective/styles/: globals.css
connective/types/: types.ts
connective/util/: get-recommended-users.ts  index.ts  network.ts  routes.ts
lambda-functions/ConnectivePaymentSuccess/: index.js  package-lock.json
lambda-functions/connective-message-auto-mailer/: index.js  package-lock.json  package.json
lambda-functions/weeklySummary/: index.js  package-lock.json  package.json
microservices/webserver/: Cargo.toml  Dockerfile  docker-compose.yml
microservices/webserver/src/: main.rs
microservices/webserver/src/dao/: mod.rs
microservices/webserver/src/email/: email_builder.rs  mod.rs
microservices/webserver/src/engine/: engine_weights.rs  mod.rs  recommendation_engine.rs
microservices/webserver/src/referral_network/: mod.rs  network_item_raw.rs
microservices/webserver/src/user/: mod.rs
scripts/: create-options.js  migrate-users.js  package-lock.json  package.json
(+63 files in other folders)
