[package]
name = "webserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
incremental = true

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3.3"
sqlx = { version = "0.6.2", features = [ "runtime-async-std-native-tls", "mysql" ] }
rand = "0.8.5"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
http = "0.2.9"
reqwest = { version = "0.11.15", features = ["json", "blocking"] }
